checker/temp/368/error.log
Main.java:1: error: class, interface, enum, or record expected
print(sum(map(int,input().split())))
^
1 error
